Fix Broken Use Case Pages

--- a/get-started/use-cases/ai-agents.mdx
+++ b/get-started/use-cases/ai-agents.mdx
@@ -41,6 +41,6 @@ NPCs evolve based on player actions; live ops teams push balance changes continu
 
 ## References
 
-[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. <https://a16zcrypto.com/posts/article/state-of-crypto-report-2025/>  
-[2] Coinbase, “The rise of onchain AI agents, apps, and commerce,” 2025. <https://www.coinbase.com/blog/the-rise-of-onchain-ai-agents-apps-and-commerce>
+[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. [\1](\1)  
+[2] Coinbase, “The rise of onchain AI agents, apps, and commerce,” 2025. [\1](\1)
 
