--- a/get-started/use-cases/gaming.mdx
+++ b/get-started/use-cases/gaming.mdx
@@ -40,5 +40,5 @@ Agents manage NPC behaviors and dynamic events. Instant finality keeps AI states
 
 ## References
 
-[1] CoinGecko, “Web3 Gaming on SKALE in 2024,” 2024. <https://www.coingecko.com/learn/web3-gaming-on-skale-in-2024>
+[1] CoinGecko, “Web3 Gaming on SKALE in 2024,” 2024. [\1](\1)
 
