--- a/get-started/use-cases/government-blockchains.mdx
+++ b/get-started/use-cases/government-blockchains.mdx
@@ -38,5 +38,5 @@ Store verifiable credentials privately; share attestations selectively with part
 
 ## References
 
-[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. <https://a16zcrypto.com/posts/article/state-of-crypto-report-2025/>
+[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. [\1](\1)
 
