--- a/get-started/use-cases/more-use-cases.mdx
+++ b/get-started/use-cases/more-use-cases.mdx
@@ -44,6 +44,6 @@ Tokenize properties, manage rentals, and settle investor payouts with instant fi
 
 ## References
 
-[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. <https://a16zcrypto.com/posts/article/state-of-crypto-report-2025/>  
-[2] Grayscale Research, “The Real World: How DePIN Bridges Crypto Back to Physical Systems,” 2025. <https://research.grayscale.com/reports/the-real-world-how-depin-bridges-crypto-back-to-physical-systems>
+[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. [\1](\1)  
+[2] Grayscale Research, “The Real World: How DePIN Bridges Crypto Back to Physical Systems,” 2025. [\1](\1)
 
