--- a/get-started/use-cases/private-payments.mdx
+++ b/get-started/use-cases/private-payments.mdx
@@ -43,8 +43,8 @@ Anchor stablecoins on SKALE for instant FX-free transfers, then bridge to jurisd
 
 ## References
 
-[1] a16z, “How stablecoins will eat payments, and what happens next,” 2025. <https://a16zcrypto.com/posts/article/how-stablecoins-will-eat-payments/>  
-[2] Coinbase Market Intelligence, “New framework for stablecoin growth,” 2025. <https://www.coinbase.com/institutional/research-insights/research/market-intelligence/new-framework-for-stablecoin-growth>  
-[3] S&P Global Ratings, “Stablecoins, financial stability, and treasuries: What’s next for money and safe assets,” 2025. <https://www.spglobal.com/ratings/en/regulatory/article/stablecoins-financial-stability-and-treasuries-whats-next-for-money-and-safe-assets-s101659822>  
-[4] Circle Research, “Refund Protocol: Non-Custodial Dispute Resolution for Stablecoin Payments,” 2025. <https://www.circle.com/blog/refund-protocol-non-custodial-dispute-resolution-for-stablecoin-payments>
+[1] a16z, “How stablecoins will eat payments, and what happens next,” 2025. [\1](\1)  
+[2] Coinbase Market Intelligence, “New framework for stablecoin growth,” 2025. [\1](\1)  
+[3] S&P Global Ratings, “Stablecoins, financial stability, and treasuries: What’s next for money and safe assets,” 2025. [\1](\1)  
+[4] Circle Research, “Refund Protocol: Non-Custodial Dispute Resolution for Stablecoin Payments,” 2025. [\1](\1)
 
