Fix More Usecases References

--- a/get-started/use-cases/more-use-cases.mdx
+++ b/get-started/use-cases/more-use-cases.mdx
@@ -33,17 +33,8 @@ Issue and manage credentials privately; share attestations or proofs publicly wh
 
 Tokenize properties, manage rentals, and settle investor payouts with instant finality. Keep title data private on SKALE while publishing proofs to public chains for trust.
 
-> Graphic: Grid of verticals showing private SKALE chains with optional Ethereum bridges for proofs and liquidity.
-
-## Resources
-
-- [Build a DApp](/developers/build-a-dapp)
-- [Solidity Quickstart](/developers/solidity-quickstart)
-- [Deploy on SKALE](/developers/deploy-on-skale)
-- [SKALE Bridge](/developers/skale-bridge/overview)
-
 ## References
 
-[1] a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025. [\1](\1)  
-[2] Grayscale Research, “The Real World: How DePIN Bridges Crypto Back to Physical Systems,” 2025. [\1](\1)
+[1] [a16z, “State of Crypto 2025: The year crypto went mainstream,” 2025.](https://stateofcrypto.a16zcrypto.com)
 
+[2] [Grayscale Research, “The Real World: How DePIN Bridges Crypto Back to Physical Systems,” 2025.](https://research.grayscale.com/reports/the-real-world-how-depin-bridges-crypto-back-to-physical-systems)
