Fix Citations, Remove Graphic Placeholders

--- a/get-started/use-cases/gaming.mdx
+++ b/get-started/use-cases/gaming.mdx
@@ -14,8 +14,6 @@ CoinGecko profiles SKALE as a zero-gas, high-throughput gaming stack, highlighti
 - **Fair randomness** — Native VRF powers loot, drops, and matchmaking with verifiable fairness.
 - **High concurrency** — Thousands of concurrent players per shard with isolated execution so noisy neighbors never impact you.
 
-> Graphic: Gameplay flow showing action → SKALE transaction → instant confirmation → reward.
-
 ## What teams ship on SKALE
 
 ### Live-service economies
@@ -30,15 +28,7 @@ Shared assets can move between your titles while remaining fee-free for players.
 ### AI-driven NPCs and ops
 Agents manage NPC behaviors and dynamic events. Instant finality keeps AI states aligned with player actions.
 
-> Graphic: Architecture with game client, SKALE chain, VRF module, and Ethereum bridge.
-
-## Launch Plan
-
-1) Scaffold contracts with [Build a DApp](/developers/build-a-dapp) and wire verifiable randomness via [Random Number Generation](/developers/native-features/random-number-generation).  
-2) Ship assets using [Deploy ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token) or [Deploy ERC-1155 Token](/cookbook/smart-contracts/deploy-erc1155-token).  
-3) Stress test live ops on a staging chain, then migrate balances and go live on your dedicated SKALE chain.
-
 ## References
 
-[1] CoinGecko, “Web3 Gaming on SKALE in 2024,” 2024. [\1](\1)
+[1] [CoinGecko, “Web3 Gaming on SKALE in 2024,” 2024](https://www.coingecko.com/learn/web3-gaming-on-skale-in-2024)
 
